--- a/taskThree/index.html
+++ b/taskThree/index.html
@@ -66,7 +66,7 @@
   <article>
     <div class="left-box">
       <img src="./image.jpg" alt="girl">
-      <h2 class="topic">Lucy</h2>
+      <h2 class="topic">Lucky</h2>
     </div>
     <ul class="right-box">
       <li><img src="./longmao.jpg" alt="longmao"></li>
