--- a/taskFour/index.html
+++ b/taskFour/index.html
@@ -25,22 +25,22 @@
       margin-left:-200px;
     }
     .top-left{
-      background: #fc0;
-      width:100px;
-      height: 100px;
-      border-radius: 50%;
+      width:50px;
+      height: 50px;
       position: absolute;
-      top:-50px;
-      left:-50px;
+      top:0px;
+      left:0px;
+      background: #fc0;
+      border-radius:0 0 50px 0;
     }
     .bottom-right{
-      background: #fc0;
-      width:100px;
-      height: 100px;
-      border-radius: 50%;
+      width:50px;
+      height: 50px;
       position: absolute;
-      bottom:-50px;
-      right:-50px; 
+      bottom:0px;
+      right:0px; 
+      background: #fc0;
+      border-radius:50px 0 0 0;
     }
   </style>
 </head>
