--- a/taskFive/index.html
+++ b/taskFive/index.html
@@ -9,109 +9,124 @@
   <header>
     <span class="title">百度学院</span>
   </header>
-  <article>
-    <h1>最后一篇文章的一级标题</h1>
-    <h2 class="sub-title">文章二级标题</h2>
-    <label class="author">文章作者</label>
-    <time class="time">文章发表时间</time>
-    <ol class="sort-list">
-      <li>排名1</li>
-      <li>排名2</li>
-      <li>排名3</li>
-    </ol>
-    <p class="table-discription">下面是一个表格，给表格加一个border="1"好让你看出是一个表格</p>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>表头</th>
-          <th>表头</th>
-          <th>表头</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>表内容单元格</td>
-          <td>表内容单元格</td>
-          <td><a href="javascript:;">操作</a></td>
-        </tr>
-        <tr>
-          <td>表内容单元格</td>
-          <td>表内容单元格</td>
-          <td><a href="javascript:;">操作</a></td>
-        </tr>
-        <tr>
-          <td>表内容单元格</td>
-          <td>表内容单元格</td>
-          <td><a href="javascript:;">操作</a></td>
-        </tr>
-        <tr>
-          <td>表内容单元格</td>
-          <td>表内容单元格</td>
-          <td><a href="javascript:;">操作</a></td>
-        </tr>
-        <tr class="tfoot">
-          <td>总计</td>
-          <td colspan="2">1000</td>
-        </tr>
-      </tbody>
-    </table>  
-  </article>
-  <article>
-    <aside>
-      <h1>这以后是一个侧栏，这是侧栏标题</h1>
-    </aside>
-    <form class="form-group">
-      <label class="form-title">请输入邮箱地址</label>
-      <input class="form-input" type="text" placeholder="这是一个文本输入框" />
-    </form>
-    <p class="form-tips">邮箱地址请按要求格式输入</p>
-    <form class="form-group">
-      <label class="form-title">请输入密码</label>
-      <input class="form-input" type="password" placeholder="这是一个文本输入框" />
-    </form>
-    <form class="form-group">
-      <label class="form-title">请重复输入密码</label>
-      <input class="form-input" type="password" placeholder="这是一个文本输入框" />
-    </form>
-    <p class="form-tips">密码请为6-16位英文数字</p>
-    <form class="form-group">
-      <label class="form-title">性别</label>
-      <div class="form-input">
-        <input type="radio" name="sex" value="mail" /><label class="option">男</label>
-        <input type="radio" name="sex" value="femail" /><label class="option">女</label>
-      </div>
-    </form>
-    <form class="form-group">
-      <label class="form-title">城市</label>
-      <div class="form-input">
-        <select class="form-title" name="city">
-          <option value="BeiJing" selected="selected">北京</option>
-          <option value="NanJing">南京</option>
-          <option value="JiNan">济南</option>
-        </select>
-      </div>
-    </form>
-    <form class="form-group">
-      <label class="form-title">爱好</label>
-      <div class="form-input">
-        <input type="checkbox" name="hobby" value="football" /><label class="option">足球</label>
-        <input type="checkbox" name="hobby" value="basketball" /><label class="option">篮球</label>
-        <input type="checkbox" name="hobby" value="badminton" /><label class="option">羽毛球</label>
-      </div>
-    </form>
-    <form class="form-group">
-      <label class="form-title">个人描述：</label>
-      <textarea class="form-input">这是一个多行文本框，输入你的个人描述</textarea>
-    </form>
-    <input class="submit" type="submit" value="确认提交" />
-    <form>
-      <fieldset>
-        <legend>我还没用过这个功能</legend>
-        身高<input type="text" />
-        体重<input type="text" />
-      </fieldset>
-    </form>
-  </article>
+  <div class="main-container clearfix">
+    <div class="left-box">
+      <article>
+        <ul>
+          <li><img src="./image.jpg"></li>
+          <li><img src="./image.jpg"></li>
+          <li><img src="./image.jpg"></li>
+          <li><img src="./image.jpg"></li>
+          <li><img src="./image.jpg"></li>
+          <li><img src="./image.jpg"></li>
+          <li><img src="./image.jpg"></li>
+        </ul>
+      </article>
+      <article>
+        <h1>最后一篇文章的一级标题</h1>
+        <h2 class="sub-title">文章二级标题</h2>
+        <label class="author">文章作者</label>
+        <time class="time">文章发表时间</time>
+        <ol class="sort-list">
+          <li>排名1</li>
+          <li>排名2</li>
+          <li>排名3</li>
+        </ol>
+        <p class="table-discription">下面是一个表格，给表格加一个border="1"好让你看出是一个表格</p>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>表头</th>
+              <th>表头</th>
+              <th>表头</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>表内容单元格</td>
+              <td>表内容单元格</td>
+              <td><a href="javascript:;">操作</a></td>
+            </tr>
+            <tr>
+              <td>表内容单元格</td>
+              <td>表内容单元格</td>
+              <td><a href="javascript:;">操作</a></td>
+            </tr>
+            <tr>
+              <td>表内容单元格</td>
+              <td>表内容单元格</td>
+              <td><a href="javascript:;">操作</a></td>
+            </tr>
+            <tr>
+              <td>表内容单元格</td>
+              <td>表内容单元格</td>
+              <td><a href="javascript:;">操作</a></td>
+            </tr>
+            <tr class="tfoot">
+              <td>总计</td>
+              <td colspan="2">1000</td>
+            </tr>
+          </tbody>
+        </table>  
+      </article>
+    </div>
+    <article class="right-box">
+      <aside>
+        <h1>这以后是一个侧栏，这是侧栏标题</h1>
+      </aside>
+      <form class="form-group">
+        <label class="form-title">请输入邮箱地址</label>
+        <input class="form-input" type="text" placeholder="这是一个文本输入框" />
+      </form>
+      <p class="form-tips">邮箱地址请按要求格式输入</p>
+      <form class="form-group">
+        <label class="form-title">请输入密码</label>
+        <input class="form-input" type="password" placeholder="这是一个文本输入框" />
+      </form>
+      <form class="form-group">
+        <label class="form-title">请重复输入密码</label>
+        <input class="form-input" type="password" placeholder="这是一个文本输入框" />
+      </form>
+      <p class="form-tips">密码请为6-16位英文数字</p>
+      <form class="form-group">
+        <label class="form-title">性别</label>
+        <div class="form-input">
+          <input type="radio" name="sex" value="mail" /><label class="option">男</label>
+          <input type="radio" name="sex" value="femail" /><label class="option">女</label>
+        </div>
+      </form>
+      <form class="form-group">
+        <label class="form-title">城市</label>
+        <div class="form-input">
+          <select class="form-title" name="city">
+            <option value="BeiJing" selected="selected">北京</option>
+            <option value="NanJing">南京</option>
+            <option value="JiNan">济南</option>
+          </select>
+        </div>
+      </form>
+      <form class="form-group">
+        <label class="form-title">爱好</label>
+        <div class="form-input">
+          <input type="checkbox" name="hobby" value="football" /><label class="option">足球</label>
+          <input type="checkbox" name="hobby" value="basketball" /><label class="option">篮球</label>
+          <input type="checkbox" name="hobby" value="badminton" /><label class="option">羽毛球</label>
+        </div>
+      </form>
+      <form class="form-group">
+        <label class="form-title">个人描述：</label>
+        <textarea class="form-input">这是一个多行文本框，输入你的个人描述</textarea>
+      </form>
+      <input class="submit" type="submit" value="确认提交" />
+      <form>
+        <fieldset>
+          <legend>我还没用过这个功能</legend>
+          身高<input type="text" />
+          体重<input type="text" />
+        </fieldset>
+      </form>
+    </article>
+  </div>
   <footer>版权所有&copy;</footer>
 </body>
 </html>
